---
source: compiler-core/src/parse/tests.rs
expression: "\nconst a = [1, 2, <-]\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:2:18
  │
2 │ const a = [1, 2, <-]
  │                  ^^ I was not expecting this

Found `<-`, expected one of: 
`]`
a constant value
